# src/routes/v1/auth-route.js
@@ -8,9 +8,9 @@ const {
   ResetPassword
 } = require('../../controllers/auth-controllers');
 
-router.post('/v1/register', RegisterUser);
-router.post('/v1/login', LoginUser);
-router.post('/v1/forgot-password', ForgotPassword);
-router.post('/v1/reset-password/:token', ResetPassword);
+router.post('/api/v1/register', RegisterUser);
+router.post('/api/v1/login', LoginUser);
+router.post('/api/v1/forgot-password', ForgotPassword);
+router.post('/api/v1/reset-password/:token', ResetPassword);
 
 module.exports = router;
