# src/routes/v1/post-route.js
@@ -12,11 +12,11 @@ const {
 const { votePost } = require('../../controllers/vote-controllers');
 const AuthMiddleware = require('../../middlewares/auth-middleware');
 
-router.post('/v1/post', AuthMiddleware, upload.single('image'), createPost);
-router.get('/v1/post', GetAllPosts);
-router.get('/v1/post/:id', GetSinglePost);
-router.delete('/v1/post/:id', AuthMiddleware, DeletePost);
-router.put('/v1/post/:id', upload.single('image'), AuthMiddleware, UpdatePost);
-router.post('/v1/post/vote/:id', AuthMiddleware, votePost);
+router.post('/api/v1/post', AuthMiddleware, upload.single('image'), createPost);
+router.get('/api/v1/post', GetAllPosts);
+router.get('/api/v1/post/:id', GetSinglePost);
+router.delete('/api/v1/post/:id', AuthMiddleware, DeletePost);
+router.put('/api/v1/post/:id', upload.single('image'), AuthMiddleware, UpdatePost);
+router.post('/api/v1/post/vote/:id', AuthMiddleware, votePost);
 
 module.exports = router;
